# hello

./: .gitignore  Cargo.toml  fib.py  fib_rust.py  noxfile.py  pyproject.toml  search.py
assets/: index.html
src/: lib.rs  main.rs
tests/: test_world_count.py
word_count/: __init__.py
