[package]
name = "hello"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = {version = "*", features=["full"]}
thiserror = {version = "*"}
axum = {version = "*"}
tower-http = {version = "0.6.2", features=["fs", "trace"]}
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
serde = {version = "1.0.217", features=["derive"]}
