[package]
name = "hello"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "*", features = ["full"] }
thiserror = { version = "*" }
axum = { version = "0.8.1" }
tower-http = { version = "0.6.2", features = ["fs", "trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = { version = "1.0.138" }
askama = { version = "0.12.1" }
bb8 = "0.9.0"
bb8-postgres = "0.9.0"
tokio-postgres = "0.7.13"
